package linter.core;

public enum Severity {
    WARNING,
    ERROR
}
